More work on Medical Chart app

--- a/omod/src/main/webapp/resources/styles/kenyaemr.css
+++ b/omod/src/main/webapp/resources/styles/kenyaemr.css
@@ -46,3 +46,32 @@
 .padded {
 	padding: 1em;
 }
+
+.panel:nth-child(odd) {
+	background-color: #e0e0e0;
+}	
+
+.panel {
+	border: 1px #a0a0a0 solid;
+	margin-bottom: 0.5em;
+	padding: 0.2em;
+}
+.panel .title {
+	display: block;
+	font-weight: bold;
+	font-size: 1.1em;
+}
+.panel .icon {
+	float: left;
+	padding-right: 0.3em;
+}
+.panel .leftText {
+	float: left;
+}
+.panel .one-column {
+	float: left;
+}
+
+.clickable {
+	cursor: pointer;
+}
