Cleaned up account edit screen * Uses clearer edit buttons which are always visible * Consistent styling with rest of module

--- a/omod/src/main/webapp/resources/styles/kenyaemr.css
+++ b/omod/src/main/webapp/resources/styles/kenyaemr.css
@@ -78,9 +78,7 @@
 	background-color: #E8E6DB;
 	padding: 3px;
 	border-radius: 1px;
-}
-
-.panel-editlink a {
+	color: black;
 	text-decoration: none;
 }
 
