Tidied up reports UI * Consistent 'Report Menu' for each report * Improved styling of output data tables

--- a/omod/src/main/webapp/resources/styles/kenyaemr.css
+++ b/omod/src/main/webapp/resources/styles/kenyaemr.css
@@ -278,6 +278,17 @@ table.table-vertical tbody tr:nth-child(odd) {
 	font-size: 12px;
 }
 
+/*** Forms ***/
+
+fieldset {
+	border: 2px solid #D1D0C9;
+}
+
+legend {
+	color: #333;
+	font-weight: bold;
+}
+
 /*** Others... ***/
 
 .identifier-label {
