--- a/omod/src/main/webapp/resources/styles/kenyaemr.css
+++ b/omod/src/main/webapp/resources/styles/kenyaemr.css
@@ -1,27 +1,8 @@
 /********************************************
  *
- * General styles for KenyaEMR module
+ * General styles for the Kenya EMR
  *
  ********************************************/
-
-/*** General fonts ***/
-
-html, body {
-	font-family: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-	font-size: 14px;
-}
-
-h4 {
-	font-size: 16px;
-}
-
-h3 {
-	font-size: 18px;
-}
-
-small {
-	font-size: 12px;
-}
 
 /*** Full window views (used for login and forgot password pages) ***/
 
@@ -31,7 +12,7 @@ small {
 	height: 100%;
 	display: table;
 	position: absolute;
-	background-color: #e0e0e0;
+	background-color: #e0d8cd;
 }
 
 /*** Page header ***/
