Added lab testing functionality * Lab tests are defined in an XML resource * labTest custom tag can be added to HFE forms and generate fields for lab tests dynamically

--- a/omod/src/main/webapp/resources/styles/kenyaemr.css
+++ b/omod/src/main/webapp/resources/styles/kenyaemr.css
@@ -97,3 +97,10 @@
 	background-color: #466469;
 	color: white;
 }
+
+/***** Dynamic form fields *****/
+
+.ke-form-dynamic-field {
+	display: block;
+	margin: 5px 0 5px 0;
+}
