Tidied up branding of KenyaEMR * Moved logos into this module from KenyaUI * Updated ministry name on page header * Cleaned up all references to "Kenya EMR" to be "KenyaEMR"

--- a/omod/src/main/webapp/resources/styles/kenyaemr.css
+++ b/omod/src/main/webapp/resources/styles/kenyaemr.css
@@ -1,6 +1,6 @@
 /********************************************
  *
- * General styles for the Kenya EMR
+ * General styles for KenyaEMR
  *
  ********************************************/
 
