Reworked startup exceptions so that KenyaEMR can display more meaningful exception messages and display a header if something went wrong during context refresh

--- a/omod/src/main/webapp/resources/styles/kenyaemr.css
+++ b/omod/src/main/webapp/resources/styles/kenyaemr.css
@@ -59,3 +59,10 @@
 .ke-search {
 	width: 300px;
 }
+
+.ke-system-header {
+	padding: 3px;
+	text-align: center;
+	background-color: #AA0000;
+	color: white;
+}
