--- a/omod/src/main/webapp/resources/styles/kenyaemr.css
+++ b/omod/src/main/webapp/resources/styles/kenyaemr.css
@@ -57,3 +57,11 @@
 	display: block;
 	margin: 5px 0 5px 0;
 }
+
+.ke-form-name {
+	color: #413c32;
+	padding: 5px;
+	text-align: center;
+	font-weight: bold;
+	font-size: 16px;
+}
