Improved patient-chart-close button * Added confirmation dialog * Styled it like a button

--- a/omod/src/main/webapp/resources/styles/kenyaemr.css
+++ b/omod/src/main/webapp/resources/styles/kenyaemr.css
@@ -33,6 +33,14 @@
 	color: white;
 }
 
+.ke-patientheader button {
+	background-color: #c9c3b4;
+}
+
+.ke-patientheader button:hover {
+	background-color: #d9d3c4;
+}
+
 /***** System header *****/
 
 .ke-system-header {
