--- a/omod/src/main/webapp/resources/styles/smart_wizard.css
+++ b/omod/src/main/webapp/resources/styles/smart_wizard.css
@@ -1,10 +1,10 @@
-/*   
-  SmartWizard 2.0 plugin 
-  jQuery Wizard control Plugin
-  by Dipu
-  
-  http://www.techlaboratory.net
-  http://tech-laboratory.blogspot.com
+/*
+SmartWizard 2.0 plugin
+jQuery Wizard control Plugin
+by Dipu
+
+http://www.techlaboratory.net
+http://tech-laboratory.blogspot.com
 */
 .swMain {
   position:relative;
@@ -14,53 +14,53 @@
   border: 0 solid #CCC;
   overflow:visible;
   float:left;
-  width:980px;
+  width:100%;
 }
 .swMain .stepContainer {
   display:block;
   position: relative;
   margin: 0;
-  padding:0;    
+  padding:0;
   border: 0 solid #CCC;
   overflow-x: hidden;
-  overflow-y: scroll;
+  /*overflow-y: scroll;*/
   clear:both;
-  height:300px;
+  height:98%;
 }
 
 .swMain .stepContainer div.content {
   display:block;
-  position: absolute;  
+  position: absolute;
   float:left;
   margin: 0;
-  padding:5px;    
-  border: 1px solid #CCC; 
-  font: normal 12px Verdana, Arial, Helvetica, sans-serif; 
-  color:#5A5655;   
-  background-color:#F8F8F8;  
-  height:300px;
+  padding:5px;
+  border: 1px solid #CCC;
+  font: normal 12px Verdana, Arial, Helvetica, sans-serif;
+  color:#5A5655;
+  background-color:#F8F8F8;
+  /*height:1000px;*/
   text-align:left;
-  overflow:visible;    
-  z-index:88; 
+  overflow:visible;
+  z-index:88;
   -webkit-border-radius: 5px;
   -moz-border-radius  : 5px;
-  width:968px;
+  width:100%;
   clear:both;
 }
 
 .swMain div.actionBar {
   display:block;
-  position: relative; 
+  position: relative;
   clear:both;
-  margin:             3px 0 0 0;   
+  margin:             3px 0 0 0;
   border:             1px solid #CCC;
-  padding:            0;    
-  color:              #5A5655;   
+  padding:            0;
+  color:              #5A5655;
   background-color:   #F8F8F8;
   height:40px;
   text-align:left;
-  overflow:auto;    
-  z-index:88; 
+  overflow:auto;
+  z-index:88;
 
   -webkit-border-radius: 5px;
   -moz-border-radius  : 5px;
@@ -70,17 +70,17 @@
 .swMain .stepContainer .StepTitle {
   display:block;
   position: relative;
-  margin:0;   
+  margin:0;
   border:1px solid #E0E0E0;
-  padding:5px;   
-  font: bold 16px Verdana, Arial, Helvetica, sans-serif; 
-  color:#5A5655;   
+  padding:5px;
+  font: bold 16px Verdana, Arial, Helvetica, sans-serif;
+  color:#5A5655;
   background-color:#E0E0E0;
   clear:both;
-  text-align:left; 
+  text-align:left;
   z-index:88;
   -webkit-border-radius: 5px;
-  -moz-border-radius  : 5px;    
+  -moz-border-radius  : 5px;
 }
 .swMain ul.anchor {
   position: relative;
@@ -88,13 +88,13 @@
   float:left;
   list-style: none;
   padding: 0;
-  margin: 10px 0;      
+  margin: 10px 0;
   clear: both;
   border: 0 solid #CCCCCC;
   background: transparent; /*#EEEEEE */
 }
-.swMain ul.anchor li{ 
-  position: relative; 
+.swMain ul.anchor li{
+  position: relative;
   display:block;
   margin: 0;
   padding: 0 3px;
@@ -146,40 +146,40 @@
   box-shadow: 5px 5px 8px #888;
 }
 .swMain ul.anchor li a.selected:hover {
-  color:#F8F8F8;  
-  background: #EA8511;  
+  color:#F8F8F8;
+  background: #EA8511;
 }
 
-.swMain ul.anchor li a.done { 
+.swMain ul.anchor li a.done {
   position:relative;
-  color:#FFF;  
-  background: #8CC63F;  
-  border: 1px solid #8CC63F;   
+  color:#FFF;
+  background: #8CC63F;
+  border: 1px solid #8CC63F;
   z-index:99;
 }
 .swMain ul.anchor li a.done:hover {
-  color:#5A5655;  
-  background: #8CC63F; 
-  border: 1px solid #5A5655;   
+  color:#5A5655;
+  background: #8CC63F;
+  border: 1px solid #5A5655;
 }
 .swMain ul.anchor li a.disabled {
-  color:#CCCCCC;  
+  color:#CCCCCC;
   background: #F8F8F8;
-  border: 1px solid #CCC;  
-  cursor:text;   
+  border: 1px solid #CCC;
+  cursor:text;
 }
 .swMain ul.anchor li a.disabled:hover {
-  color:#CCCCCC;  
-  background: #F8F8F8;     
+  color:#CCCCCC;
+  background: #F8F8F8;
 }
 
 .swMain ul.anchor li a.error {
-  color:#6c6c6c !important;  
+  color:#6c6c6c !important;
   background: #f08f75 !important;
-  border: 1px solid #fb3500 !important;      
+  border: 1px solid #fb3500 !important;
 }
 .swMain ul.anchor li a.error:hover {
-  color:#000 !important;       
+  color:#000 !important;
 }
 
 .swMain .buttonNext {
@@ -195,14 +195,14 @@
   outline-style:none;
   background-color:   #5A5655;
   border: 1px solid #5A5655;
-  -moz-border-radius  : 5px; 
-  -webkit-border-radius: 5px;    
+  -moz-border-radius  : 5px;
+  -webkit-border-radius: 5px;
 }
 .swMain .buttonDisabled {
   color:#F8F8F8  !important;
   background-color: #CCCCCC !important;
   border: 1px solid #CCCCCC  !important;
-  cursor:text;    
+  cursor:text;
 }
 .swMain .buttonPrevious {
   display:block;
@@ -217,8 +217,8 @@
   outline-style:none;
   background-color:   #5A5655;
   border: 1px solid #5A5655;
-  -moz-border-radius  : 5px; 
-  -webkit-border-radius: 5px;    
+  -moz-border-radius  : 5px;
+  -webkit-border-radius: 5px;
 }
 .swMain .buttonFinish {
   display:block;
@@ -233,8 +233,8 @@
   outline-style:none;
   background-color:   #5A5655;
   border: 1px solid #5A5655;
-  -moz-border-radius  : 5px; 
-  -webkit-border-radius: 5px;    
+  -moz-border-radius  : 5px;
+  -webkit-border-radius: 5px;
 }
 
 /* Form Styles */
@@ -251,33 +251,33 @@
 }
 
 .swMain .loader {
-  position:relative;  
+  position:relative;
   display:none;
-  float:left;  
+  float:left;
   margin: 2px 0 0 2px;
   padding:8px 10px 8px 40px;
-  border: 1px solid #FFD700; 
-  font: bold 13px Verdana, Arial, Helvetica, sans-serif; 
-  color:#5A5655;       
-  background: #FFF url(../images/loader.gif) no-repeat 5px;  
+  border: 1px solid #FFD700;
+  font: bold 13px Verdana, Arial, Helvetica, sans-serif;
+  color:#5A5655;
+  background: #FFF url(../images/loader.gif) no-repeat 5px;
   -moz-border-radius  : 5px;
   -webkit-border-radius: 5px;
   z-index:998;
 }
 .swMain .msgBox {
-  position:relative;  
+  position:relative;
   display:none;
   float:left;
   margin: 4px 0 0 5px;
   padding:5px;
-  border: 1px solid #FFD700; 
-  background-color: #FFFFDD;  
-  font: normal 12px Verdana, Arial, Helvetica, sans-serif; 
-  color:#5A5655;         
+  border: 1px solid #FFD700;
+  background-color: #FFFFDD;
+  font: normal 12px Verdana, Arial, Helvetica, sans-serif;
+  color:#5A5655;
   -moz-border-radius  : 5px;
   -webkit-border-radius: 5px;
   z-index:999;
-  min-width:200px;  
+  min-width:200px;
 }
 .swMain .msgBox .content {
   font: normal 12px Verdana,Arial,Helvetica,sans-serif;
@@ -299,5 +299,5 @@
 }
 .swMain .msgBox .close:hover{
   color: #EA8511;
-  border: 1px solid #EA8511;  
+  border: 1px solid #EA8511;
 }
